--- a/web/files/httpd.conf
+++ b/web/files/httpd.conf
@@ -11,8 +11,8 @@ ServerName localhost
     Require all denied
 </Directory>
 
-DocumentRoot "/var/www/html"
-<Directory "/var/www/html">
+DocumentRoot "/var/www/html/public"
+<Directory "/var/www/html/public">
     Options Indexes FollowSymLinks
     AllowOverride None
     Require all granted
