--- a/web/files/httpd.conf
+++ b/web/files/httpd.conf
@@ -3,24 +3,13 @@ Listen 80
 Include conf.modules.d/*.conf
 User apache
 Group apache
-ServerAdmin root@localhost
-ServerName localhost
 
-<Directory />
-    AllowOverride none
-    Require all denied
+TypesConfig /etc/mime.types
+
+DocumentRoot "/var/www/laravel/public"
+<Directory "/var/www/laravel/public">
+    AllowOverride All
 </Directory>
-
-DocumentRoot "/var/www/sample/public"
-<Directory "/var/www/sample/public">
-    Options Indexes FollowSymLinks
-    AllowOverride None
-    Require all granted
-</Directory>
-
-<IfModule dir_module>
-    DirectoryIndex index.html
-</IfModule>
 
 <Files ".ht*">
     Require all denied
@@ -36,21 +25,5 @@ LogLevel warn
     </IfModule>
     CustomLog "logs/access_log" combined
 </IfModule>
-
-<IfModule mime_module>
-    TypesConfig /etc/mime.types
-    AddType application/x-compress .Z
-    AddType application/x-gzip .gz .tgz
-    AddType text/html .shtml
-    AddOutputFilter INCLUDES .shtml
-</IfModule>
-
-AddDefaultCharset UTF-8
-
-<IfModule mime_magic_module>
-    MIMEMagicFile conf/magic
-</IfModule>
-
-EnableSendfile on
 
 IncludeOptional conf.d/*.conf
